added css for authenticity

--- a/client/source/index.html
+++ b/client/source/index.html
@@ -71,7 +71,7 @@ access to a large universe of documents.<P>
         NAME=49 HREF="LineMode/Defaults/Distribution.html">
         anonymous FTP</A> , etc.</A>
 </DL>
-<script src="./javascript/build.js"></script>
+<script src="build.js"></script>
 </BODY>
 
 
