--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <HEADER>
     <TITLE>The World Wide Web project</TITLE>
     <NEXTID N="55">
+    <script type="module" src="js/app.js"></script>
 </HEADER>
 <BODY>
 <H1>World Wide Web</H1>The WorldWideWeb (W3) is a wide-area<A
@@ -71,7 +72,7 @@ access to a large universe of documents.<P>
         NAME=49 HREF="LineMode/Defaults/Distribution.html">
         anonymous FTP</A> , etc.</A>
 </DL>
-<script src="build.js"></script>
+<script nomodule src="build.js"></script>
 </BODY>
 
 
