--- a/tiny-tunes/src/index.html
+++ b/tiny-tunes/src/index.html
@@ -37,6 +37,7 @@
         Create a h2-elemenet containing the text "This is a sub headline" and put it
         after the p-elemenet containing this text.
     </p>
+    <h2>This is a sub headline</h2>
 </div>
 <hr />
 
