--- a/tiny-tunes/src/index.html
+++ b/tiny-tunes/src/index.html
@@ -44,6 +44,7 @@
 
 <div id="step03">
     <h2>Exercise 3</h2>
+    <h2>This is a sub headline</h2>>
     <p>
         Create a h2-element containing the text "This is a sub headline" and put it
         after the fifth h2-element (having the text "Exercise 3") in the document.
