--- a/tiny-tunes/src/index.html
+++ b/tiny-tunes/src/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>Exercise - Tiny-tunes</title>
     <link rel="stylesheet" href="css/style.css"/>
-    <script type="module" src="js/app.js"></script>
+    <script type="module" src="/js/app.js"></script>
     <template id="step07-template">
         <li class="listitem"><a href="#" class="red greybox"></a></li>
     </template>
@@ -37,14 +37,12 @@
         Create a h2-elemenet containing the text "This is a sub headline" and put it
         after the p-elemenet containing this text.
     </p>
-    <h2>This is a sub headline</h2>
 </div>
 <hr />
 
 
 <div id="step03">
     <h2>Exercise 3</h2>
-    <h2>This is a sub headline</h2>>
     <p>
         Create a h2-element containing the text "This is a sub headline" and put it
         after the fifth h2-element (having the text "Exercise 3") in the document.
