--- a/exercise-click-game/src/index.html
+++ b/exercise-click-game/src/index.html
@@ -4,10 +4,10 @@
     <link rel="stylesheet" href="css/style.css"/>
     <script type="module" src="js/app.js"></script>
 </head>
-<body>
+<body style='background-color: black'>
 <div class="messages">
-    <div id="colorToClick">Color to click: </div>
-    <div>Time: <span id="time"></span></div>
+    <h2><div id="colorToClick">Color to click: </div><h2>
+    <h2><div style="color:white">Time: <span id="time"></span></div><h2>
 
 </div>
 <div class="container" id="board">
@@ -25,3 +25,4 @@
 <script nomodule src="build.js"></script>
 </body>
 </html>
+
