--- a/exercise-click-game/src/index.html
+++ b/exercise-click-game/src/index.html
@@ -6,9 +6,10 @@
 </head>
 <body style='background-color: black'>
 <div class="messages">
-    <h2><div id="colorToClick">Color to click: </div><h2>
-    <h2><div style="color:white">Time: <span id="time"></span></div><h2>
-
+    <h2>
+        <div id="colorToClick">Color to click: </div>
+        <div style="color:white" id="time">Time: </div>
+    </h2>
 </div>
 <div class="container" id="board">
     <div class="column-center border grey"></div>
