--- a/exercise-click-game/src/index.html
+++ b/exercise-click-game/src/index.html
@@ -4,25 +4,10 @@
     <link rel="stylesheet" href="css/style.css"/>
     <script type="module" src="js/app.js"></script>
 </head>
-<body style='background-color: black'>
-<div class="messages">
-    <h2>
-        <div id="colorToClick">Color to click: </div>
-        <div style="color:white" id="time">Time: </div>
-    </h2>
-</div>
-<div class="container" id="board">
-    <div class="column-center border grey"></div>
-    <div class="column-left border grey"></div>
-    <div class="column-right border grey"></div>
-    <div class="column-center border grey"></div>
-    <div class="column-left border grey"></div>
-    <div class="column-right border grey"></div>
-    <div class="column-center border grey"></div>
-    <div class="column-left border grey"></div>
-    <div class="column-right border grey"></div>
-</div>
-
+<body style='background-color:white'>
+<h2>
+    Do not modify whole page on restart
+</h2>
 <script nomodule src="build.js"></script>
 </body>
 </html>
